changed format of duration from 30:30 to 30m30s. this format also supports hours. see http://golang.org/pkg/time/#ParseDuration for all options.

--- a/videos/2014/06/google-io-2014/google-io-2014-polymer-and-web-components-change-everything-you-know-about-web-development.json
+++ b/videos/2014/06/google-io-2014/google-io-2014-polymer-and-web-components-change-everything-you-know-about-web-development.json
@@ -9,7 +9,7 @@
     ],
     "event": "google-io-2014",
     "recorded_at": "2014-06-25T14:00",
-    "duration": "36:13",
+    "duration": "36m13s",
     "uploaded_at": "2014-06-25",
     "poster": "https://i1.ytimg.com/vi/8OJ7ih8EE7s/maxresdefault.jpg",
     "lang": "en"
