--- a/videos/2014/06/google-io-2014/google-io-2014-polymer-and-the-web-components-revolution.json
+++ b/videos/2014/06/google-io-2014/google-io-2014-polymer-and-the-web-components-revolution.json
@@ -9,7 +9,7 @@
     ],
     "event": "google-io-2014",
     "recorded_at": "2014-06-25T13:00",
-    "duration": "38:47",
+    "duration": "38m47s",
     "uploaded_at": "2014-06-25",
     "poster": "https://i1.ytimg.com/vi/yRbOSdAe_JU/maxresdefault.jpg",
     "lang": "en"
