Fix video durations

--- a/videos/2014/06/google-io-2014/google-io-2014-polymer-and-the-web-components-revolution.json
+++ b/videos/2014/06/google-io-2014/google-io-2014-polymer-and-the-web-components-revolution.json
@@ -2,7 +2,9 @@
     "id": "google-io-2014-polymer-and-the-web-components-revolution",
     "name": "Polymer and the Web Components revolution",
     "url": "https://www.youtube.com/watch?v=yRbOSdAe_JU",
-    "speakers": ["mcnulty-matt"],
+    "speakers": [
+        "mcnulty-matt"
+    ],
     "tags": [
         "polymer",
         "web-component"
